syntax = "proto3";

package session;

option java_package = "owl.proto";
option java_multiple_files = true;

message CreateSessionRequest {
  string user_id = 1;
  int32 port = 2;
  string host = 3;
}

message CreateSessionResponse {
  bool success = 1;
}

service SessionService {
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse) {};
}
